<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_build_apk" android:title="@string/action_build_apk" />
    <item android:id="@+id/menu_gradle_build" android:title="@string/action_gradle_build" />

    <item android:id="@+id/menu_sep_ndk" android:title="" />

    <item android:id="@+id/menu_sep_1" android:title="" />

    <item android:id="@+id/menu_clean" android:title="@string/action_clean" />
    <item android:id="@+id/menu_rebuild" android:title="@string/action_rebuild" />

    <item android:id="@+id/menu_sep_2" android:title="" />

    <item android:id="@+id/menu_libraries" android:title="@string/action_libraries" />
    <item android:id="@+id/menu_build_settings" android:title="@string/action_build_settings" />
    <item android:id="@+id/menu_signing_key" android:title="@string/action_signing_key" />

    <item android:id="@+id/menu_rust_build"   android:title="Build Rust (.rs)" />
    <item android:id="@+id/menu_scala_build"  android:title="Build Scala (.scala)" />
    <item android:id="@+id/menu_groovy_build" android:title="Build Groovy (.groovy)" />

</menu>
